--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Project-specific settings:
-#data/
+data/
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks,data,linux,macos,windows
