--- a/environment.yml
+++ b/environment.yml
@@ -1,37 +1,207 @@
-# Check out this great guide to environment files!
-# https://carpentries-incubator.github.io/introduction-to-conda-for-data-scientists/04-sharing-environments/index.html
-
-name: change-me
-
-# higher channels get priority
+name: distillation
 channels:
   - conda-forge
-  - anaconda
   - defaults
-
-# Prefer conda dependencies over pip wherever possible
 dependencies:
-  - python=3.9
-  - pip
-  - ipdb
-  - pytest
-  - pre-commit
-  - flake8
-  - black
-  - ipykernel
-  - ipython
-  - tqdm
-  - numpy
-  - pandas
-  - scikit-learn
-  - matplotlib
-  # Uncomment the below to add pip dependencies if necessary"
-  # - pip:
-    # - mydep==1.0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - bzip2=1.0.8=hd590300_5
+  - ca-certificates=2024.6.2=hbcca054_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - debugpy=1.8.1=py312h30efb56_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.0=pyhd8ed1ab_2
+  - executing=2.0.1=pyhd8ed1ab_0
+  - importlib-metadata=7.1.0=pyha770c72_0
+  - importlib_metadata=7.1.0=hd8ed1ab_0
+  - ipykernel=6.29.4=pyh3099207_0
+  - ipython=8.25.0=pyh707e725_0
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jupyter_client=8.6.2=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=py312h7900ff3_0
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.2=h659d440_0
+  - ld_impl_linux-64=2.40=hf3520f5_2
+  - libedit=3.1.20191231=he28a2e2_2
+  - libexpat=2.6.2=h59595ed_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-ng=13.2.0=h77fa898_7
+  - libgomp=13.2.0=h77fa898_7
+  - libnsl=2.0.1=hd590300_0
+  - libsodium=1.0.18=h36c2ea0_1
+  - libsqlite=3.45.3=h2797004_0
+  - libstdcxx-ng=13.2.0=hc0a3c3a_7
+  - libuuid=2.38.1=h0b41bf4_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libzlib=1.3.1=h4ab18f5_1
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - ncurses=6.5=h59595ed_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - openssl=3.3.1=h4ab18f5_0
+  - packaging=24.0=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pip=24.0=pyhd8ed1ab_0
+  - platformdirs=4.2.2=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.46=pyha770c72_0
+  - psutil=5.9.8=py312h98912ed_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - python=3.12.3=hab00c5b_0_cpython
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python_abi=3.12=4_cp312
+  - pyzmq=26.0.3=py312h8fd38d8_0
+  - readline=8.2=h8228510_1
+  - setuptools=70.0.0=pyhd8ed1ab_0
+  - six=1.16.0=pyh6c4a22f_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tk=8.6.13=noxft_h4845f30_101
+  - tornado=6.4.1=py312h9a8786e_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
+  - wheel=0.43.0=pyhd8ed1ab_1
+  - xz=5.2.6=h166bdaf_0
+  - zeromq=4.3.5=h75354e8_4
+  - zipp=3.18.0=pyhd8ed1ab_0
+  - pip:
+      - absl-py==2.1.0
+      - anyio==4.4.0
+      - argon2-cffi==23.1.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
+      - astunparse==1.6.3
+      - async-lru==2.0.4
+      - attrs==23.2.0
+      - babel==2.15.0
+      - beautifulsoup4==4.12.3
+      - bleach==6.1.0
+      - certifi==2024.6.2
+      - cffi==1.16.0
+      - charset-normalizer==3.3.2
+      - contourpy==1.2.1
+      - cycler==0.12.1
+      - defusedxml==0.7.1
+      - einops==0.8.0
+      - fastjsonschema==2.20.0
+      - filelock==3.15.4
+      - flatbuffers==24.3.25
+      - fonttools==4.53.1
+      - fqdn==1.5.1
+      - fsspec==2024.6.1
+      - gast==0.6.0
+      - gdown==5.2.0
+      - google-pasta==0.2.0
+      - grpcio==1.64.1
+      - h11==0.14.0
+      - h5py==3.11.0
+      - httpcore==1.0.5
+      - httpx==0.27.0
+      - huggingface-hub==0.23.4
+      - idna==3.7
+      - ipywidgets==8.1.3
+      - isoduration==20.11.0
+      - jinja2==3.1.4
+      - joblib==1.4.2
+      - json5==0.9.25
+      - jsonpointer==3.0.0
+      - jsonschema==4.22.0
+      - jsonschema-specifications==2023.12.1
+      - jupyter==1.0.0
+      - jupyter-console==6.6.3
+      - jupyter-events==0.10.0
+      - jupyter-lsp==2.2.5
+      - jupyter-server==2.14.1
+      - jupyter-server-terminals==0.5.3
+      - jupyterlab==4.2.3
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.27.2
+      - jupyterlab-widgets==3.0.11
+      - keras==3.4.1
+      - kiwisolver==1.4.5
+      - libclang==18.1.1
+      - lightning-utilities==0.11.7
+      - markdown==3.6
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.5
+      - matplotlib==3.9.2
+      - mdurl==0.1.2
+      - mistune==3.0.2
+      - ml-dtypes==0.4.0
+      - mpmath==1.3.0
+      - namex==0.0.8
+      - nbclient==0.10.0
+      - nbconvert==7.16.4
+      - nbformat==5.10.4
+      - networkx==3.3
+      - notebook==7.2.1
+      - notebook-shim==0.2.4
+      - numpy==1.26.4
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==8.9.2.26
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.5.82
+      - nvidia-nvtx-cu12==12.1.105
+      - opt-einsum==3.3.0
+      - optree==0.12.1
+      - overrides==7.7.0
+      - pandas==2.2.2
+      - pandocfilters==1.5.1
+      - pillow==10.4.0
+      - prometheus-client==0.20.0
+      - protobuf==4.25.3
+      - pycparser==2.22
+      - pyparsing==3.1.2
+      - pysocks==1.7.1
+      - python-json-logger==2.0.7
+      - pytz==2024.1
+      - pyyaml==6.0.1
+      - qtconsole==5.5.2
+      - qtpy==2.4.1
+      - referencing==0.35.1
+      - requests==2.32.3
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rich==13.7.1
+      - rpds-py==0.18.1
+      - scikit-learn==1.5.1
+      - scipy==1.14.0
+      - seaborn==0.13.2
+      - send2trash==1.8.3
+      - sniffio==1.3.1
+      - soupsieve==2.5
+      - sympy==1.13.0
+      - tabulate==0.9.0
+      - tensorboard==2.17.0
+      - tensorboard-data-server==0.7.2
+      - tensorflow==2.17.0
+      - termcolor==2.4.0
+      - terminado==0.18.1
+      - threadpoolctl==3.5.0
+      - timm==0.6.12
+      - tinycss2==1.3.0
+      - torch==2.3.1
+      - torchmetrics==1.4.2
+      - torchvision==0.18.1
+      - tqdm==4.66.4
+      - types-python-dateutil==2.9.0.20240316
+      - tzdata==2024.1
+      - uri-template==1.3.0
+      - urllib3==2.2.2
+      - webcolors==24.6.0
+      - webencodings==0.5.1
+      - websocket-client==1.8.0
+      - werkzeug==3.0.3
+      - widgetsnbextension==4.0.11
+      - wrapt==1.16.0
 
-# Define any *static* OS environment variables here
-#   Note: anything dynamic (e.g., referencing other variables) must be set post
-#   environment creation using `conda env config vars set`. See setting the
-#   PYTHONPATH in the README.
-variables:
-  CACHE_NUMBER: 0
